other/require-deployments-have-multiple-replicas/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: deployment-has-multiple-replicas
policies:
- ../require-deployments-have-multiple-replicas.yaml
resources:
- resource.yaml
results:
- kind: Deployment
  policy: deployment-has-multiple-replicas
  resources:
  - mydeploy
  result: pass
  rule: deployment-has-multiple-replicas
